// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should match snapshot Plan Card with selected boolean prop 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    selected={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "display": "flex",
          "elevation": 4,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#178173",
        },
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      testID="touchable"
    >
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "position": "relative",
              "width": "100%",
            },
            Object {
              "marginBottom": 40,
            },
          ]
        }
      >
        <View
          ribbon={null}
          style={
            Array [
              Object {
                "display": "flex",
                "flexBasis": "100%",
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
            ]
          }
        >
          <Text
            selected={true}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                },
              ]
            }
          >
            Basic
          </Text>
        </View>
      </View>
      <Text
        selected={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
              "fontWeight": "700",
            },
          ]
        }
      >
        U$ 19.90
      </Text>
      <Text
        selected={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
              "paddingTop": 4,
            },
          ]
        }
      >
        /
        month
      </Text>
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            },
            Object {
              "marginTop": 20,
            },
          ]
        }
      >
        <Text
          selected={true}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          1,239
           gyms
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`<Card /> should match snapshot with default Card 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "display": "flex",
          "elevation": 4,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
          "width": "100%",
        },
      ]
    }
  >
    <Text>
      Teste
    </Text>
  </View>
</View>
`;
